--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -31,12 +31,12 @@
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                       Fecha de Inicio
-                      <input #dtFechaIni="ngModel" type="date" class="form-control" name="dtFechaIni"
+                      <input #dtFechaIni="ngModel" type="date" class="form-control" name="dtFechaIni" id="dtFechaIni"
                         [(ngModel)]="_ModelReporteGeneral.fechaInicial" required value="">
                     </li>
                     <li class="list-group-item">
                       Fecha de Final
-                      <input #dtFechaFin="ngModel" type="date" class="form-control" name="dtFechaFin"
+                      <input #dtFechaFin="ngModel" type="date" class="form-control" name="dtFechaFin" id="dtFechaFin"
                         [(ngModel)]="_ModelReporteGeneral.fechaFinal" required value="">
                     </li>
                   </ul>
