--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -63,8 +63,8 @@
                   <td style="cursor: help" title="{{ item.descDeptoFuncional }} ">
                     {{ item.inicialesDeptoFuncional }}
                   </td>
-                  <td >{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
-                  <td >{{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }}</td>
+                  <td >{{ item.fechaIngreso | date :'dd-MM-yyyy' }}</td>
+                  <td >{{ item.fechaMaxEntrega | date :'dd-MM-yyyy' }}</td>
                   <td style="cursor: help" title="{{ item.perfilInstitucion }} ">
                     {{ item.descInstitucion }}
                   </td>
@@ -75,6 +75,7 @@
                   <td > {{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }} </td>
                   <td > <a style="cursor: pointer;" class="nav-link">
                       <span [ngClass]="{ 'text-warning': item.idEstado == 3,
+                                      'text-danger': item.idEstado == 4,
                                       'text-primary': item.idEstado == 5,
                                       'text-success': item.idEstado == 7,
                                        'text-info': item.idEstado == 8 }"
@@ -174,7 +175,7 @@
                                         <tr *ngFor="let item of JsonOutgetlistaComunicacionDet | searchfilter:'codCorrespondenciaDet':search2 ">
                                           <td style="width:80px"> {{ item.codCorrespondenciaDet }}  </td>
                                           <td style="width:80px"> {{ item.codReferenciaSreci }} </td>
-                                          <td > {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>
+                                          <td > {{ item.fechaIngreso | date :'dd-MM-yyyy' }} </td>
                                           <td> {{ item.actividadRealizar }} </td>
                                           <td> {{ item.descCorrespondenciaDet }} </td>
                                           <!-- <td> {{ item.idEstado.descripcionEstado }} </td> -->
@@ -224,7 +225,7 @@
                                         <tr *ngFor="let item of JsonOutgetlistaDocumentos; let i = index">
                                           <th scope="row">{{ i + 1 }}</th>
                                           <td>{{ item.codDocumento }}</td>
-                                          <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
+                                          <td>{{ item.fechaIngreso | date :'dd-MM-yyyy' }}</td>
                                           <td>{{ item.urlDocumento }}</td>
                                           <td>
                                             <a *ngIf="item.urlDocumento != null && item.urlDocumento.length > 5"
