--- a/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.salida/correspondencia.salida.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.salida/correspondencia.salida.component.css
@@ -25,6 +25,8 @@
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(169,68,66,.6) !important;
 }
 
+
+/* Estilo para la Carga de Pantalla Completa */
 .loader-new {
   position: fixed;
   left: 0px;
@@ -41,33 +43,52 @@
   margin-top: 20%
 }
 
+.hr-new {
+  border: 1px solid #30A7EE;
+  border-radius: 200px /8px;
+  height: 0px;
+  width: 90%;
+  text-align: center;
+ }
+
+
+ .text-on-pannel {
+  background: #fff none repeat scroll 0 0;
+  height: auto;
+  margin-left: 2px;
+  padding: 5px 0 0 10px;
+  position: absolute;
+  margin-top: -40px;
+  border: 1px solid #337ab7;
+  border-radius: 6px;
+  width: auto;
+}
+
+.panel {
+  /* for text on pannel */
+  margin-top: 10px !important;
+}
+
+.panel-body {
+  padding-top: 30px !important;
+}
+
 
 /* Personalizacion del File Inut */
 .custom-file-control:lang(en)::after {
-  content: "Selecciona el archivo a Subir ...";
+  content: "Selecciona el archivo ...";
 }
 
 .custom-file-control:lang(en)::before {
   content: "Buscar";
 }
 
-.text-on-pannel {
- background: #fff none repeat scroll 0 0;
- height: auto;
- margin-left: 2px;
- padding: 5px 0 0 10px;
- position: absolute;
- margin-top: -40px;
- border: 1px solid #337ab7;
- border-radius: 6px;
- width: auto;
-}
 
-.panel {
- /* for text on pannel */
- margin-top: 10px !important;
-}
-
-.panel-body {
- padding-top: 30px !important;
+.botoncontacto
+{
+ background-image: url('../../../../assets/icons/comunicacion/diskette_24x24.png');
+ background-repeat: no-repeat;
+ width: 50px;
+ height: 50px;
+ border-width: 0;
 }
