--- a/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.entrada/correspondencia.entrada.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/correspondencia/correspondencia.entrada/correspondencia.entrada.component.html
@@ -34,7 +34,7 @@
                       Ingresa el No. de Correspondencia Entrante
                   </small>
                   <input #codCorrespondencia="ngModel" type="text" name="codCorrespondencia" id="codCorrespondencia" class="form-control col-6"
-                         placeholder="No. de Correspondencia" (keyup.enter)="buscaComunicacion()" autofocus="true" minlength="5"
+                         placeholder="No. de Correspondencia" (keyup.enter)="buscaComunicacion()" autofocus="true" minlength="5" autofocus tabindex="1"
                          ngControl="codCorrespondencia" [(ngModel)]="_entradaCorrespondenciaModel.codCorrespondencia" required >
 
                   <small class="form-text text-muted" *ngIf="codCorrespondencia.errors?.required" >Debes ingresar el Número de la Correspondencia</small>
@@ -54,7 +54,7 @@
                     Tema de la Correspondencia
                 </small>
                   <input #temaCorrespondencia="ngModel" type="text" name="temaCorrespondencia" id="temaCorrespondencia" class="form-control col-7"
-                        placeholder="Tema de la Correspondencia" ngControl="temaCorrespondencia" required minlength="5"
+                        placeholder="Tema de la Correspondencia" ngControl="temaCorrespondencia" required minlength="5" tabindex="2"
                          value="" [(ngModel)]="_entradaCorrespondenciaModel.temaCorrespondencia" >
                     <small class="form-text text-muted" *ngIf="temaCorrespondencia.errors?.required" >Debes ingresar El Tema de la Correspondencia</small>
                     <small class="form-text text-muted" *ngIf="temaCorrespondencia.errors?.minlength" >
@@ -62,6 +62,7 @@
                 </div>
             </div>
 
+            <br>
             <div class="row">
               <div class="col-12">
                   <!-- <label >Descripcion Comunicacion</label> -->
@@ -69,7 +70,7 @@
                       Descripción de la Correspondencia
                   </small>
                   <textarea #descCorrespondencia="ngModel" class="form-control" id="descCorrespondencia" name="descCorrespondencia" rows="4"
-                              placeholder="Descripción de la Correspondencia" tabindex="2" type="text" required
+                              placeholder="Descripción de la Correspondencia" type="text" required tabindex="3"
                               [(ngModel)]="_entradaCorrespondenciaModel.descCorrespondencia" ngControl="descCorrespondencia"
                               minlength="15"  >
                   </textarea>
@@ -88,10 +89,10 @@
                   <div class="form-group">
                     <!-- <h6>Unidad Responsable</h6> -->
                     <small class="form-text text-muted">
-                        Unidad Responsable
+                        Unidad Responsable de Correspondencia
                     </small>
                     <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci" required
-                          ngControl="idDireccionSreci" [(ngModel)]="_entradaCorrespondenciaModel.idDireccionSreci" tabindex="8"  (change)="getlistaSubDireccionesSRECI()" >
+                          ngControl="idDireccionSreci" [(ngModel)]="_entradaCorrespondenciaModel.idDireccionSreci" tabindex="4"  >
                         <option value="0">Unidad Responsable </option>
                         <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
                     </select>
@@ -109,12 +110,12 @@
       					<div class="form-group">
                   <!-- <h6>País / Entidad de Comunicación</h6> -->
                   <small class="form-text text-muted">
-                      País / Entidad de Comunicación
+                      País / Entidad de Correspondencia
                   </small>
                   <select #idPais="ngModel" class="form-control" name="idPais" id="idPais"
-                        title="País / Entidad donde viene la Comunicación"
-                        ngControl="idPais" [(ngModel)]="_entradaCorrespondenciaModel.idPais" tabindex="4">
-                      <option value="0">País</option>
+                        title="País / Entidad donde viene la Correspondencia"
+                        ngControl="idPais" [(ngModel)]="_entradaCorrespondenciaModel.idPais" tabindex="5">
+                      <option value="0">País / Entidad de Correspondencia</option>
                       <option *ngFor="let list of JsonOutgetlistaPaises" value="{{ list.idPais }}">{{ list.descPais }}</option>
                   </select>
                   <small class="form-text text-muted" *ngIf="idPais.value == 0 || idPais.value == null " >Debes Seleccionar un País</small>
@@ -130,7 +131,7 @@
                   </small>
                   <select title="Tipo de Comunicación, si es Cooperante, Embajada, Ong etc."
                         #idTipoInstitucion="ngModel" class="form-control" name="idTipoInstitucion" id="idTipoInstitucion"
-                        ngControl="idTipoInstitucion" [(ngModel)]="_entradaCorrespondenciaModel.idTipoInstitucion" tabindex="5"
+                        ngControl="idTipoInstitucion" [(ngModel)]="_entradaCorrespondenciaModel.idTipoInstitucion" tabindex="6"
                         (change)="getlistaInstituciones()" >
                       <option value="0" >Tipo de Institución</option>
                       <option *ngFor="let list of JsonOutgetlistaTipoInstitucion" value="{{ list.idTipoInstitucion }}">{{ list.descTipoInstitucion }}</option>
@@ -148,7 +149,7 @@
                   </small>
                   <select title="Debes de selecionar un País y Tipo de Institución, para asi poder seleccionar la Institución de la comunicación"
                         #idInstitucion="ngModel" class="form-control" name="idInstitucion" id="idInstitucion"
-                        ngControl="idInstitucion" [(ngModel)]="_entradaCorrespondenciaModel.idInstitucion"  tabindex="6">
+                        ngControl="idInstitucion" [(ngModel)]="_entradaCorrespondenciaModel.idInstitucion"  tabindex="7">
                       <option value="0">Selecciona una Institución</option>
                       <option *ngFor="let list of JsonOutgetlistaInstitucion" value="{{ list.idInstitucion }}">
                           {{ list.descInstitucion }} | {{ list.perfilInstitucion }}
@@ -210,7 +211,7 @@
                                <td class="text-center">{{ suchnewrow.pesoDoc }}</td>
                                <td class="text-center"> <a title="Has Clic sobre la Imagen para ver con detalle el contenido..."
                                        href="{{ urlComplete + suchnewrow.nameDoc + '.' + suchnewrow.extDoc }}" target="_blank" >
-                                 <img style="width:100px; height:100px; box-shadow:8px 10px 5px 0px #888888"
+                                 <img style="width:60px; height:60px; box-shadow:8px 10px 5px 0px #888888"
                                    src="{{ urlComplete + suchnewrow.nameDoc + '.' + suchnewrow.extDoc }}"
                                    onerror="this.src='assets/icons/media/question-class-note-symbol-128x128.png'"
                                    alt="Cargando Imagen ..." ></a>
